# comet

./: .gitignore  COMET.md  LICENSE  README.md  benchmark_demo.py  benchmark_real.py  comet_feature_report.md  demo_comet.py  main.py  measure_cost.py  pyproject.toml
.github/workflows/: mirror-to-herewedev.yml
benchmark/: __init__.py  run_benchmark.py  run_benchmark_hard.py  synthetic_data.py  synthetic_data_hard.py  synthetic_data_ultra.py
comet/: __init__.py  claude_code_oauth.py  claude_code_oauth_mcp.py  compacter.py  config.py  consolidator.py  flags.py  llm_factory.py  mcp_server 2.py  mcp_server.py  orchestrator.py  retriever.py  schemas.py  sensor.py  storage.py  vector_index.py
comet/templates/: __init__.py  cognitive_load.txt  compacting.txt  compacting_axes.txt  compacting_base.txt  compacting_code.txt  compacting_external.txt  compacting_file.txt  consolidation_assessment.txt  host_cli_neutralize.txt  l1_extraction.txt  merge_summary.txt  merge_trigger.txt  query_analysis.txt  rule_consolidation.txt  synthesis_create.txt  synthesis_validate.txt
comet_private/: __init__.py  orchestrator.py
como/: __init__.py  como.py  memory.py  schemas.py  single_scored.py  web_search.py
erase/: erase.py  memory.py
scripts/: recall_freq_report.py
sudal/: schemas.py  sudal.py
tests/: comparison_test.py  niah_benchmark.py  test_agent_retrieval.py  test_claude_code_oauth.py  test_comet.py  test_comparison.py  test_extended.py  test_llm_factory_routing.py  test_rag.py  test_recall_journal.py  test_snapshot.py  test_storage_bugs.py  test_vector_index_optimize.py
tests/benchmark/: __init__.py  runner.py  schemas.py
tests/benchmark/data/: tasks.json
