[project]
name = "comet-memory"
version = "0.3.1"
description = "CoMeT — Cognitive Memory Tree: Hierarchical memory system for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dirac-Robot"},
]
keywords = ["memory", "llm", "agent", "rag", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ato>=2.2.0",
    "chromadb>=1.4.1",
    "langchain>=1.2.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
providers = [
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["comet*"]
